@@ -1,3 +1,8 @@
+Fri Oct 22 12:12:51 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * TAO_IDL/be/be_visitor_component/facet_exh.cpp:
+          No export macro needed and generate doxygen groups
+
 Fri Oct 22 11:59:58 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * TAO_IDL/be/be_visitor_component/executor_exh.cpp:
